--- a/DateFirst.Web/Templates/editProfile.html
+++ b/DateFirst.Web/Templates/editProfile.html
@@ -7,7 +7,7 @@
             </button>
         </div>
         <div class="useravatar">
-            <img alt="" src="http://lorempixel.com/100/100/cats/2">
+            <img alt="" src={{this.AvatarUrl}}>
         </div>
 
         <div class="card-info">
