--- a/DateFirst.Web/Content/CustomCss/style.css
+++ b/DateFirst.Web/Content/CustomCss/style.css
@@ -1,9 +1,9 @@
-﻿body.pace-done{
-    background-color: #fff;
-    background-image: url('../../Images/download.png');
+﻿body {
     color: #888888;
     font-family: 'Open Sans',Arial,sans-serif;
     font-size: 16px;
+    background-color: #fff;
+    background-image: url('../../Images/download.png')!important;
 }
 
 p {
@@ -33,8 +33,15 @@ a:hover {
     outline: none;
 }
 
-body{
-  background: #fefefe;
+#profile-btn {
+   margin-left: -50px;
+   margin-bottom: 50px;
+   border: none;
+   outline: none;
+}
+
+#home-btn:hover, #profile-btn:hover {
+    background-image: url('../../Images/cloud button hover.png');
 }
 
 .login-containers a {
