--- a/DateFirst.Web/Content/CustomCss/style.css
+++ b/DateFirst.Web/Content/CustomCss/style.css
@@ -3,7 +3,7 @@
     font-family: 'Open Sans',Arial,sans-serif;
     font-size: 16px;
     background-color: #fff;
-    background-image: url('../../Images/download.png')!important;
+    background-image: url('../../Images/clouds-background.jpg')!important;
 }
 
 p {
