--- a/DateFirst.Web/Content/CustomCss/style.css
+++ b/DateFirst.Web/Content/CustomCss/style.css
@@ -3,7 +3,7 @@
     font-family: 'Open Sans',Arial,sans-serif;
     font-size: 16px;
     background-color: #fff;
-    background-image: url('../../Images/clouds-background.jpg')!important;
+    background-image: url('../../Images/clouds-background.jpg') !important;
 }
 
 p {
@@ -126,6 +126,8 @@ a:hover {
         #users-container .panel a {
             font-size: 14px;
             color: #8AB933;
+            float: right;
+            margin-right: 10px;
         }
 
         #users-container .panel .panel-heading {
@@ -350,23 +352,23 @@ a:hover {
                 height: 252px;
             }
 
-            .well .tab-content #comments .portlet #comments-container .post {
-                margin-bottom: 20px;
-            }
+                .well .tab-content #comments .portlet #comments-container .post {
+                    margin-bottom: 20px;
+                }
 
-                .well .tab-content #comments .portlet #comments-container .poster-and-date{      
+                .well .tab-content #comments .portlet #comments-container .poster-and-date {
                     vertical-align: top;
-                    color: black;             
-                    display: inline-block;    
-                    width: 25%;                
+                    color: black;
+                    display: inline-block;
+                    width: 25%;
                 }
 
-                .well .tab-content #comments .portlet #comments-container .poster-and-date .poster-name{
-                    font-size: 20px;
-                }
+                    .well .tab-content #comments .portlet #comments-container .poster-and-date .poster-name {
+                        font-size: 20px;
+                    }
 
-                .well .tab-content #comments .portlet #comments-container .post-content{
-                    display: inline-block;  
+                .well .tab-content #comments .portlet #comments-container .post-content {
+                    display: inline-block;
                     width: 70%;
                 }
 
@@ -443,10 +445,35 @@ a:hover {
         text-align: center;
     }
 
-#users-container .panel a {
-    float: right;
-    margin-right: 10px;
+/*Sorted Users Page*/
+#sorted-users {
+    background: white;
+    height: 600px;
+    overflow-y: auto;
 }
+
+    #sorted-users ul li {
+        width: 50%;
+        padding: 20px;
+        margin: 0 auto;
+        list-style-type: none;
+    }
+
+        #sorted-users ul li a {
+            font-size: 20px;
+        }
+
+            #sorted-users ul li a img {
+                width: 64px;
+                height: 64px;
+                margin-right: 20px;
+            }
+
+        #sorted-users ul li .search-user-flirts {
+            float: right;
+            margin-top: 5px;
+            width: 25%;
+        }
 
 .card {
     margin-top: 0px !important;
@@ -553,16 +580,16 @@ body #wrapper {
     margin: 30% 0 0 30%;
 }
 
-#footer {
+/*#footer {
     color: white;
     background: #8AB933;
     float: right;
-    /*position: absolute;
+    position: absolute;
     left: 506px;
-    top: 569px;*/
-    width: 683px;
+    top: 743px;
+    width: 674px;
     height: 93px;
-}
+}*/
 
 .btn-file {
     position: relative;
